--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <springfox-version>2.7.0</springfox-version>
         <java.version>1.8</java.version>
+        <spring-security-oauth2-version>2.0.0.RELEASE</spring-security-oauth2-version>
+
     </properties>
 
     <dependencies>
@@ -34,7 +36,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>${spring-security-oauth2-version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
